pika, pika, pikachuu

--- a/2014/cpp/02_pelota/cpp/Makefile
+++ b/2014/cpp/02_pelota/cpp/Makefile
@@ -1,9 +1,9 @@
-CXX = gcc
+CXX = g++
 CXXFLAGS = -g
 LDLIBS = -lallegro -lallegro_image -lallegro_dialog
 
-DEPS = pelota.h
-OBJ = pelota.o bouncy.o
+DEPS = mi_allegro.h pelota.h 
+OBJ = mi_allegro.o pelota.o bouncy.o
 
 bouncy: $(OBJ)
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDLIBS)
