--- a/2014/cpp/04_naves/Makefile
+++ b/2014/cpp/04_naves/Makefile
@@ -2,8 +2,8 @@ CXX = g++
 CXXFLAGS = -g 
 LDLIBS = -lallegro -lallegro_image -lallegro_dialog 
 
-DEPS = mi_allegro.h nave.h prota.h 
-OBJ = mi_allegro.o nave.cpp prota.o game.o 
+DEPS = mi_allegro.h arma.h nave.h prota.h 
+OBJ = mi_allegro.o arma.o nave.o prota.o game.o 
 
 game: $(OBJ) 
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDLIBS) 
