image manipulation program

--- a/2015/40_bmp/im/Makefile
+++ b/2015/40_bmp/im/Makefile
@@ -1,4 +1,9 @@
+CC = g++
+CFLAGS = -g
 objects := $(patsubst %.cpp,%.o,$(wildcard *.cpp))
 
 im : $(objects)
-	g++ -o foo $(objects)
+	$(CC) $(CFLAGS) -o foo $(objects)
+
+%.o : %.cpp
+	$(CC) $(CFLAGS) -c $<
