chess pieces catalog

--- a/2016/38_chess/src/Makefile
+++ b/2016/38_chess/src/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -g
 LDLIBS = 
 
 DEPS = $(wildcard *.h)
-OBJS = $(patsubst %.o, %.c, $(wildcard *.c))
+OBJS = $(patsubst %.c, %.o, $(wildcard *.c))
 
 EXE  = chess
 
