game of life (Makefile 2)

--- a/2017/14_game_life/Makefile
+++ b/2017/14_game_life/Makefile
@@ -6,11 +6,8 @@ all: life
 life: interfaz.o life.o
 	gcc -o life life.o interfaz.o
 
-interfaz.o: interfaz.cpp
-	gcc -c interfaz.cpp
-
-life.o: life.cpp
-	gcc -c life.cpp
+%.o: %.cpp
+	gcc -c $<
 
 clean:
 	$(RM) *.o
